[gd_scene load_steps=16 format=3 uid="uid://ct4e5uvs38fek"]

[ext_resource type="Script" path="res://player/player.gd" id="1_8l1hb"]
[ext_resource type="Texture2D" uid="uid://cmufbkp7qyon1" path="res://assets/player/player.png" id="1_h5myc"]
[ext_resource type="PackedScene" uid="uid://dithjhkjrvhvl" path="res://shooter/shooter.tscn" id="3_1w5ow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nmgd"]
size = Vector2(10, 20)

[sub_resource type="Animation" id="Animation_gwh8j"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_wdy6l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_2jnmv"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_06dof"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_x4psu"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_878ki"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sfvw"]
_data = {
"RESET": SubResource("Animation_wdy6l"),
"fall": SubResource("Animation_x4psu"),
"hurt": SubResource("Animation_878ki"),
"idle": SubResource("Animation_gwh8j"),
"jump": SubResource("Animation_06dof"),
"run": SubResource("Animation_2jnmv")
}

[sub_resource type="Animation" id="Animation_7xt58"]
resource_name = "invincible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wrap0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbivc"]
_data = {
"RESET": SubResource("Animation_wrap0"),
"invincible": SubResource("Animation_7xt58")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_13g7w"]
radius = 8.0
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource("1_8l1hb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h5myc")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_2nmgd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8sfvw")
}
autoplay = "idle"

[node name="AnimationPlayerInvincible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbivc")
}

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="DebugLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -53.0
offset_right = 161.0
offset_bottom = 154.0
scale = Vector2(0.207084, 0.207084)
theme_override_font_sizes/font_size = 48
text = "asffafgs
asfasff
asffas"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 6)
shape = SubResource("CapsuleShape2D_13g7w")

[node name="Shooter" parent="." instance=ExtResource("3_1w5ow")]
position = Vector2(0, 7)
speed = 200.0
life_span = 10.0
shoot_delay = 1.0

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="on_hitbox_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="on_invincible_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="on_hurt_timer_timeout"]
